--- a/index.html
+++ b/index.html
@@ -32,7 +32,21 @@
         </div>
     </header>
     <main>
-
+        <section class="teams display-flex">
+            <div class="team-img-container">
+                <img src="images/team1.png" alt="two architects">
+                <img src="images/team2.png" alt="two architects">
+                <img src="images/team3.png" alt="two architects">
+                <img src="images/team4.png" alt="two architects">
+            </div>
+            <div class="our-features">
+                <h3 class="feature-tittle"> <span id="quick-list" class="text-head">Quick list</span> <span >of our</span> <span>Feature</span></h3>
+                <p class="feature-description text-light-grey">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus earum dolorem odio at repellat sapiente voluptates voluptatum voluptate, consequuntur dicta ducimus vitae deserunt vel accusamus asperiores ad delectus distinctio molestiae!
+                </p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
     </main>
     <footer>
 
