--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </div>
     </header>
     <main>
+        <!-- teams section start -->
         <section class="teams display-flex">
             <div class="team-img-container">
                 <img src="images/team1.png" alt="two architects">
@@ -40,13 +41,71 @@
                 <img src="images/team4.png" alt="two architects">
             </div>
             <div class="our-features">
-                <h3 class="feature-tittle"> <span id="quick-list" class="text-head">Quick list</span> <span >of our</span> <span>Feature</span></h3>
+                <h3 class="section-tittle"> <span id="quick-list" class="text-head">Quick list</span> <span >of our</span> <span class="text-primary">Feature</span></h3>
                 <p class="feature-description text-light-grey">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus earum dolorem odio at repellat sapiente voluptates voluptatum voluptate, consequuntur dicta ducimus vitae deserunt vel accusamus asperiores ad delectus distinctio molestiae!
                 </p>
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+        <!-- feature wil enjoy -->
+         <section>
+            
+         </section>
+
+         <!-- some facts -->
+          <section class="some-facts">
+            <h3 class="section-tittle">Some Facts</h3>
+            <p class="text-light-grey fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="fact-container">
+                <!-- .fact*4>img.fact-icon+h4.fact-number+h5.fact-name -->
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">54</h4>
+                        <h5 class="fact-name">Awards Winnings</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/projects.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">1458</h4>
+                        <h5 class="fact-name">Project Finished</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/customers.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">590</h4>
+                        <h5 class="fact-name">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/email.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">22578</h4>
+                        <h5 class="fact-name">Email Send</h5>
+                    </div>
+                </div>
+            </div>
+          </section>
+
+          <!-- our sponsors -->
+           <section class="our-sponsors">
+            <div class="sponsor-info">
+                <h3 class="section-tittle">Our Sponsors</h3>
+                <p class="text-light-grey">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+                </p>
+            </div>
+            <div class="sponsor-companies">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+           </section>
     </main>
     <footer>
 
